# cedh

./: README.md  haskit.json
edh_modules/curry/: RT.edh  __main__.edh
host.hs/: cedh.cabal
host.hs/repl/: Main.hs  Repl.hs
host.hs/runmodu/: Main.hs  Repl.hs
host.hs/src/Language/Edh/: Curry.hs
host.hs/src/Language/Edh/Curry/: Args.hs  Comput.hs  Shim.hs
