cabal-version:      2.4
name:               cedh
version:            0.1.0.0
license:            BSD-3-Clause
copyright:          Compl Yue
maintainer:         compl.yue@icloud.com
author:             Compl Yue
stability:          experimental
homepage:           https://github.com/e-wrks/cedh
bug-reports:        https://github.com/e-wrks/cedh/issues
synopsis:           Currying Edh
description:
  Please see the README on Github at <https://github.com/e-wrks/cedh>

category:           Scripting,Language
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/e-wrks/cedh
  subdir:   host.hs

library
  exposed-modules:    Language.Edh.Curry
  other-modules:
    Language.Edh.Curry.Args
    Language.Edh.Curry.Comput
    Language.Edh.Curry.Shim

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
  build-depends:
    , base                  >=4.12
    , bytestring
    , containers
    , edh
    , hashable
    , lossless-decimal
    , mtl
    , stm                   >=2.5
    , text
    , transformers
    , unordered-containers
